force-app/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <description>개별 현장 작업 단위(수리/설치/점검)</description>
    <label>Work Order</label>
    <nameField>
        <displayFormat>WO-{000000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>