force-app/main/default/objects/Work_Order__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>실제 완료 시각</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>