force-app/main/default/objects/Work_Order__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>API로 계산된 예상 도착시각</description>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>