force-app/main/default/objects/Work_Order__c/fields/Is_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Is_Outdoor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>현장 작업이 옥외에서 이루어지는지 여부 - true인 작업만 날씨 기반 자동 재조정 대상이 됨</description>
    <label>Is Outdoor</label>
    <type>Checkbox</type>
</CustomField>