force-app/main/default/objects/Work_Order__c/fields/Required_Skill__c.field-meta.xml
<CustomField>
    <fullName>Required_Skill__c</fullName>
    <description>이 작업에 필요한 기술자 스킬 (Technician__c.Skills__c와 매칭)</description>
    <label>Required Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Elevator</fullName>
            </value>
            <value>
                <fullName>Telecom</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>