force-app/main/default/objects/Work_Order__c/fields/Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason__c</fullName>
    <description>자동/수동 일정 재조정 사유 기록 (예: 악천후로 인한 자동 재조정)</description>
    <label>Reschedule Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>