force-app/main/default/objects/Work_Order__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <description>방문 예정 시각</description>
    <label>Scheduled Date</label>
    <type>DateTime</type>
</CustomField>