force-app/main/default/objects/Work_Order__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <description>현장 주소</description>
    <label>Service Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>