force-app/main/default/objects/Work_Order__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <description>상위 서비스 계약 (Master-Detail)</description>
    <label>Service Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>