force-app/main/default/objects/Work_Order__c/fields/Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Location__c</fullName>
    <description>현장 위경도(배정 거리 계산용)</description>
    <label>Service Location</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>