force-app/main/default/objects/Work_Order__c/fields/Signature_Captured__c.field-meta.xml
<CustomField>
    <fullName>Signature_Captured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>전자서명 완료 여부</description>
    <label>Signature Captured</label>
    <type>Checkbox</type>
</CustomField>