force-app/main/default/objects/Work_Order__c/fields/SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline__c</fullName>
    <description>계약 SLA 기준 마감 시각</description>
    <label>SLA Deadline</label>
    <type>DateTime</type>
</CustomField>