force-app/main/default/objects/Work_Order__c/fields/Total_Parts_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Parts_Cost__c</fullName>
    <description>사용 부품 합계 (Apex 롤업 대상)</description>
    <label>Total Parts Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>