force-app/main/default/objects/Work_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Service_Contract__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Assigned_Technician__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Service_Region__c</columns>
    <label>All</label>
</ListView>